<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addBook"
        android:text="@string/button_addBook" />
            
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
   <ImageView
    android:id="@+id/BookImage"
    android:layout_width="156dp"
    android:layout_height="216dp"
    android:adjustViewBounds="true"
    android:contentDescription="@string/BookImage"
    android:scaleType="fitCenter" > 
    
    </ImageView>
       
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
	    android:id="@+id/BookTitle"
	    android:layout_width="138dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/BookTitle" />
        
        <TextView
	    android:id="@+id/BookAuthor"
	    android:layout_width="138dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/BookAuthor" />
        
        <TextView
	    android:id="@+id/BookDesc"
	    android:layout_width="138dp"
	    android:layout_height="match_parent"
	    android:hint="@string/BookDesc" /> 
        
    </LinearLayout>

   </LinearLayout>
    





</LinearLayout>
